# UltraMegaCloudLocalStorage-2.0

./: .gitignore  pyproject.toml
src/localcoudstorage/: backend.py  main.py
