[project]
name = "localcloudstorage"
version = "0.1.0"
description = "A cloud storage (actually it's locally, but lets pretend it's cloud) working via FastAPI + PostgreSQL + Flet"
authors = [
    {name = "Silletr",email = "silletrMain@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "flet (>=0.85.3,<0.86.0)",
    "fastapi (>=0.138.0,<0.139.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
